--- a/source/_patterns/00-atoms/colors/1-brand-colors.mustache
+++ b/source/_patterns/00-atoms/colors/1-brand-colors.mustache
@@ -1,9 +1,51 @@
 <ul class="sg-colors">
 <li>
-	<span class="sg-swatch" style="background:#001d2f"></span>
+	<span class="sg-swatch" style="background:#262d3f"></span>
 	<span class="sg-label">
-		$color-first <br />
-		#000000
+		$color-dark <br />
+		#262d3f
+	</span>
+</li>
+<li>
+	<span class="sg-swatch" style="background:#153659"></span>
+	<span class="sg-label">
+		$color-medium <br />
+		#153659
+	</span>
+</li>
+<li>
+	<span class="sg-swatch" style="background:#d3d0cd"></span>
+	<span class="sg-label">
+		$color-light <br />
+		#d3d0cd
+	</span>
+</li>
+<li>
+	<span class="sg-swatch" style="background:#968d81"></span>
+	<span class="sg-label">
+		$color-neutral <br />
+		#968d81
+	</span>
+</li>
+<li>
+	<span class="sg-swatch" style="background:#ea6922"></span>
+	<span class="sg-label">
+		$color-warm <br />
+		#ea6922
+	</span>
+</li>
+<li>
+	<span class="sg-swatch" style="background:#e84950"></span>
+	<span class="sg-label">
+		$color-hot <br />
+		#e84950
+	</span>
+</li>
+<li>
+	<span class="sg-swatch" style="background:#ffffff"></span>
+	<span class="sg-label">
+		$color-white <br />
+		#ffffff
 	</span>
 </li>
 </ul>
