--- a/source/css/style.css
+++ b/source/css/style.css
@@ -61,7 +61,9 @@ button {
   position: relative;
   background-color: rgba(255, 255, 255, 0);
   font-size: 13px;
-  padding: 8px 15px; }
+  padding: 8px 15px;
+  background-color: #e84950;
+  color: #ffffff; }
 
 p {
   font-family: Georgia, serif;
