Links header footer home template

--- a/public/patterns/02-organisms-primary-nav-primary-nav/02-organisms-primary-nav-primary-nav.mustache
+++ b/public/patterns/02-organisms-primary-nav-primary-nav/02-organisms-primary-nav-primary-nav.mustache
@@ -1,12 +1,11 @@
 <div class="primary-nav">
   <div class="primary-nav-third">
-    Work
+    {{> atoms-primary-nav-link }}
   </div>
   <div class="primary-nav-third">
-    <div class="logo">logo</div>
-
+    {{> atoms-logo }}
   </div>
   <div class="primary-nav-third">
-    Info
+    {{> atoms-primary-nav-link }}
   </div>
 </div>
