--- a/source/_patterns/02-organisms/primary-nav/primary-nav.mustache
+++ b/source/_patterns/02-organisms/primary-nav/primary-nav.mustache
@@ -1,11 +1,11 @@
 <div class="primary-nav">
   <div class="primary-nav-third">
-    Work
+    {{> atoms-primary-nav-link }}
   </div>
   <div class="primary-nav-third">
     {{> atoms-logo }}
   </div>
   <div class="primary-nav-third">
-    Info
+    {{> atoms-primary-nav-link }}
   </div>
 </div>
