--- a/source/css/style.css
+++ b/source/css/style.css
@@ -34,6 +34,13 @@
  -------------------------------------*/
 /*Flexbox------------------------------
 -------------------------------------*/
+a,
+button {
+  outline: 0; }
+
+a:hover, a:active, a:focus {
+  /* styling for any way a link is about to be used */ }
+
 h1 {
   font-family: "GTAmericaBold", serif;
   font-size: 32px;
@@ -61,9 +68,7 @@ button {
   position: relative;
   background-color: rgba(255, 255, 255, 0);
   font-size: 13px;
-  padding: 8px 15px;
-  background-color: #e84950;
-  color: #ffffff; }
+  padding: 8px 15px; }
 
 p {
   font-family: Georgia, serif;
