--- a/source/css/style.scss
+++ b/source/css/style.scss
@@ -4,6 +4,16 @@
 @import "abstracts/variables";
 
 
+a,
+button {
+   outline: 0;
+}
+
+a:hover, a:active, a:focus {
+  /* styling for any way a link is about to be used */
+}
+
+
 h1 {
     @include h1;
     color: $color-hot;
@@ -11,8 +21,6 @@ h1 {
 
 button {
     @include button;
-    background-color: $color-hot;
-    color: $color-white;
     }
 
 p {
