--- a/source/css/style.scss
+++ b/source/css/style.scss
@@ -60,3 +60,60 @@ p {
     color: $color-white;
     padding: 15px;
     }
+
+/*Comps--------------------------------
+-------------------------------------*/
+
+.comp01-top {
+    @include flex;
+    @include flex-align-center;
+    position: relative;
+    width: 100%;
+    }
+
+.comp01-top .comp01-left {
+    background-color: $color-dark;
+    width: 50%;
+    padding-top: 30%;
+    }
+
+.comp01-top .comp01-right {
+    position: absolute;
+    left: 10%;
+    width: 90%;
+    padding-top: 20%;
+    background-color: $color-neutral;
+    }
+
+.comp01-bottom {
+    @include flex;
+    @include flex-justify-center;
+    @include flex-align-end;
+    position: relative;
+    width: 100%;
+    padding: 0px 10%;
+    }
+
+.comp01-bottom .comp01-left {
+    background-color: grey;
+    width: 50%;
+    padding-top:30%;
+    }
+
+.comp01-bottom .comp01-right {
+    background-color: #1a1a1a;
+    width: 50%;
+    padding-top:20%;
+    }
+
+.comp01-gs .comp01-top .comp01-left {
+    background: $color-hot;
+    }
+
+
+/*George Street -----------------------
+-------------------------------------*/
+
+.gs .comp01-top .comp01-right {
+    background: #00ff00 url("../images/GS3.jpg") no-repeat center;
+    }
