--- a/public/patterns/02-organisms-primary-nav-primary-nav/02-organisms-primary-nav-primary-nav.mustache
+++ b/public/patterns/02-organisms-primary-nav-primary-nav/02-organisms-primary-nav-primary-nav.mustache
@@ -1,11 +1,13 @@
 <div class="primary-nav">
-  <div class="primary-nav-third">
-    {{> atoms-primary-nav-link }}
-  </div>
-  <div class="primary-nav-third">
-    {{> atoms-logo }}
-  </div>
-  <div class="primary-nav-third">
-    {{> atoms-primary-nav-link }}
+  <div class="primary-nav-inside">
+    <div class="primary-nav-third">
+      {{> atoms-primary-nav-link }}
+    </div>
+    <div class="primary-nav-third">
+      {{> atoms-logo }}
+    </div>
+    <div class="primary-nav-third">
+      {{> atoms-primary-nav-link }}
+    </div>
   </div>
 </div>
