--- a/source/css/style.scss
+++ b/source/css/style.scss
@@ -3,16 +3,28 @@
 
 @import "abstracts/variables";
 
+body {
+    font-family: $font-primary;
+    color: $color-dark;
+    font-weight: $font-weight-standard;
+    }
 
 a,
 button {
-   outline: 0;
-}
+    outline: 0;
+    text-decoration: none;
+    color: $color-dark;
+    font-weight: $font-weight-standard;
+    }
 
 a:hover, a:active, a:focus {
   /* styling for any way a link is about to be used */
-}
+    }
 
+img {
+    width: 100%;
+    height: auto;
+    }
 
 h1 {
     @include h1;
@@ -27,6 +39,12 @@ p {
     @include p;
     }
 
+.small-caps {
+    font-size: $font-size-utility-small;
+    text-transform: uppercase;
+    margin-bottom: 8px;
+    }
+
 .card {
     background-color: blue;
     position: relative;
@@ -34,7 +52,7 @@ p {
     padding-top: 90%; /* 16:9 Aspect Ratio */
     }
 
-  .card-top {
+.card-top {
     position:  absolute;
     top: 0;
     width: 100%;
@@ -42,7 +60,7 @@ p {
     background-color:#333333;
     }
 
-  .card-bottom {
+.card-bottom {
     position:  absolute;
     bottom: 0;
     width: 100%;
@@ -53,12 +71,21 @@ p {
 /*Primary Nav--------------------------
 -------------------------------------*/
 
-.primary-nav {
+.primary-nav-inside {
     @include flex;
     @include flex-justify-space-between;
+    @include flex-align-center;
     background-color: $color-dark;
     color: $color-white;
     padding: 15px;
+    }
+
+.primary-nav-inside .logo {
+    max-width: 20px;
+    }
+
+.primary-nav-inside a {
+    color: $color-white;
     }
 
 /*Comps--------------------------------
@@ -110,10 +137,35 @@ p {
     background: $color-hot;
     }
 
-
 /*George Street -----------------------
 -------------------------------------*/
 
 .gs .comp01-top .comp01-right {
     background: #00ff00 url("../images/GS3.jpg") no-repeat center;
+    }
+
+/*Footer-------------------------------
+-------------------------------------*/
+
+.footer {
+    background-color: $color-dark;
+    color: $color-white;
+    }
+
+.footer-inside {
+    @include flex;
+    @include flex-align-center;
+    padding: 15px;
+    }
+
+.footer-third {
+    width: 33%;
+    }
+
+.footer-inside .logo {
+    max-width: 20px;
+    }
+
+.footer-link a {
+    color: $color-white;
     }
