--- a/public/patterns/02-organisms-footer-footer/02-organisms-footer-footer.mustache
+++ b/public/patterns/02-organisms-footer-footer/02-organisms-footer-footer.mustache
@@ -1,3 +1,13 @@
 <div class="footer">
-  {{> atoms-footer-nav-link }}
+  <div class="footer-inside">
+    <div class="footer-third">
+      {{> atoms-logo }} {{> atoms-footer-nav-link }} {{> atoms-footer-nav-link }}
+    </div>
+    <div class="footer-third">
+      {{> atoms-small-caps }} {{> atoms-paragraph }}
+    </div>
+    <div class="footer-third">
+    </div>
+    {{> atoms-footer-nav-link }} {{> atoms-footer-nav-link }} {{> atoms-footer-nav-link }}
+  </div>
 </div>
