--- a/source/css/pattern-scaffolding.css
+++ b/source/css/pattern-scaffolding.css
@@ -4,49 +4,58 @@
  * These styles will not be your production CSS.
  */
 #sg-patterns {
-  -webkit-box-sizing: border-box !important;
-          box-sizing: border-box !important;
-  max-width: 100%;
-}
+    -webkit-box-sizing: border-box !important;
+    box-sizing: border-box !important;
+    max-width: 100%;
+    }
 
 .demo-animate {
-  background: #ddd;
-  margin-bottom: 1em;
-  text-align: center;
-  border-radius: 8px;
-  cursor: pointer;
-}
+    background: #ddd;
+    margin-bottom: 1em;
+    text-align: center;
+    border-radius: 8px;
+    cursor: pointer;
+    }
 
 .sg-colors {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -ms-flex-wrap: wrap;
-      flex-wrap: wrap;
-  list-style: none !important;
-  padding: 0 !important;
-  margin: 0 !important;
-}
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -ms-flex-wrap: wrap;
+    flex-wrap: wrap;
+    list-style: none !important;
+    padding: 0 !important;
+    margin: 0 !important;
+    }
+
 .sg-colors li {
-  -webkit-box-flex: 1;
-      -ms-flex: auto;
-          flex: auto;
-  padding: 0.3em;
-  margin: 0 0.5em 0.5em 0;
-  min-width: 5em;
-  max-width: 14em;
-  border: 1px solid #ddd;
-  border-radius: 8px;
-}
+    -webkit-box-flex: 1;
+    -ms-flex: auto;
+    flex: auto;
+    padding: 0.3em;
+    margin: 0 0.5em 0.5em 0;
+    min-width: 5em;
+    max-width: 14em;
+    border: 1px solid #ddd;
+    border-radius: 8px;
+    }
 
 .sg-swatch {
-  display: block;
-  height: 4em;
-  margin-bottom: 0.3em;
-  border-radius: 5px;
-}
+    display: block;
+    height: 4em;
+    margin-bottom: 0.3em;
+    border-radius: 5px;
+    }
 
 .sg-label {
-  font-size: 90%;
-  line-height: 1;
-}
+    font-size: 90%;
+    line-height: 1;
+    }
+
+#atoms-logo > div.sg-pattern-example {
+    background-color: #333;
+    }
+
+#atoms-logo > div.sg-pattern-example img {
+    max-width: 30px;
+    }
