--- a/public/patterns/03-templates-homepage-homepage/03-templates-homepage-homepage.mustache
+++ b/public/patterns/03-templates-homepage-homepage/03-templates-homepage-homepage.mustache
@@ -1,1 +1,1 @@
-{{> organisms-primary-nav }} {{> organisms-header }} {{> organisms-comp01 }} {{> organisms-footer }}
+{{> organisms-primary-nav }} {{> organisms-header }} {{> organisms-footer }}
