--- a/source/_patterns/02-organisms/footer/footer.mustache
+++ b/source/_patterns/02-organisms/footer/footer.mustache
@@ -1,18 +1,31 @@
 <div class="footer">
   <div class="footer-inside">
-    <div class="footer-third">
-      {{> atoms-logo }}
-      {{> atoms-footer-nav-link }}
-      {{> atoms-footer-nav-link }}
+    <div class="footer-logo">
+    {{> atoms-logo }}
     </div>
-    <div class="footer-third">
-      {{> atoms-small-caps }}
-      {{> atoms-paragraph }}
+    <div class="footer-thirds">
+      <div class="footer-third first">
+        {{> atoms-footer-nav-link }}
+        {{> atoms-footer-nav-link }}
+      </div>
+      <div class="footer-third second">
+        {{> atoms-small-caps }}
+        {{> atoms-paragraph-footer }}
+      </div>
+      <div class="footer-third third">
+        <div class="columns">
+          <div class="column-first">
+            {{> atoms-footer-nav-link }}
+            {{> atoms-footer-nav-link }}
+            {{> atoms-footer-nav-link }}
+          </div>
+          <div class="column-second">
+            {{> atoms-footer-nav-link }}
+            {{> atoms-footer-nav-link }}
+            {{> atoms-footer-nav-link }}
+          </div>
+        </div>
+      </div>
     </div>
-    <div class="footer-third">
-    </div>
-    {{> atoms-footer-nav-link }}
-    {{> atoms-footer-nav-link }}
-    {{> atoms-footer-nav-link }}
   </div>
 </div>
