--- a/public/css/style.css
+++ b/public/css/style.css
@@ -38,14 +38,14 @@
 -------------------------------------*/
 body {
   font-family: "GTAmerica-Medium", serif;
-  color: #262d3f;
+  color: #181818;
   font-weight: 400; }
 
 a,
 button {
   outline: 0;
   text-decoration: none;
-  color: #262d3f;
+  color: #181818;
   font-weight: 400; }
 
 a:hover, a:active, a:focus {
@@ -58,17 +58,17 @@ img {
 h1.large {
   font-family: "GTAmerica-Medium", serif;
   font-size: 32px;
-  color: #ea6922; }
+  color: #d3d0cd; }
 
 h1 {
   font-family: "GTAmerica-Medium", serif;
   font-size: 18px;
-  color: #e84950; }
+  color: #d3d0cd; }
 
 h2 {
   font-family: "GTAmerica-Medium", serif;
   font-size: 16px;
-  color: #e84950; }
+  color: #d3d0cd; }
 
 button {
   -moz-box-sizing: border-box;
@@ -87,10 +87,11 @@ button {
   -ms-user-select: none;
   user-select: none;
   background-image: none;
-  border: 1px solid #262d3f;
+  border: 1px solid #d3d0cd;
   border-radius: 0px;
   position: relative;
   background-color: rgba(255, 255, 255, 0);
+  color: #d3d0cd;
   font-size: 13px;
   padding: 8px 15px; }
 
@@ -103,7 +104,8 @@ p {
   -moz-osx-font-smoothing: grayscale;
   -webkit-font-smoothing: antialiased;
   letter-spacing: 0.1px;
-  margin: 0; }
+  margin: 0;
+  color: #d3d0cd; }
 
 .small-caps,
 .footer-link {
@@ -125,27 +127,27 @@ p {
   -webkit-box-align: center;
   -ms-flex-align: center;
   align-items: center;
-  background-color: #262d3f;
-  color: #ffffff;
+  background-color: #181818;
+  color: #d3d0cd;
   padding: 15px; }
 
 .primary-nav-inside .logo {
   max-width: 20px; }
 
 .primary-nav-inside a {
-  color: #ffffff; }
+  color: #d3d0cd; }
 
 /*Footer-------------------------------
 -------------------------------------*/
 .footer {
-  background-color: #262d3f;
-  color: #ffffff; }
+  background-color: #181818;
+  color: #d3d0cd; }
 
 .footer-inside {
   padding: 30px 20px; }
 
 .footer-link a {
-  color: #ffffff; }
+  color: #d3d0cd; }
 
 .footer-inside img {
   display: block;
