--- a/source/css/pattern-scaffolding.css
+++ b/source/css/pattern-scaffolding.css
@@ -54,8 +54,19 @@
 
 #atoms-logo > div.sg-pattern-example {
     background-color: #333;
+    padding: 20px;
+    max-width: 100px;
+    text-align: center;
     }
 
 #atoms-logo > div.sg-pattern-example img {
-    max-width: 30px;
+    max-width: 14px;
+    }
+
+#organisms-primary-nav > div.sg-pattern-example .primary-nav-inside {
+    padding: 0px 30px;
+    }
+
+#organisms-footer > div.sg-pattern-example .footer-inside {
+    padding: 40px 30px;
     }
