--- a/public/patterns/02-organisms-primary-nav-primary-nav/02-organisms-primary-nav-primary-nav.mustache
+++ b/public/patterns/02-organisms-primary-nav-primary-nav/02-organisms-primary-nav-primary-nav.mustache
@@ -1,12 +1,12 @@
 <div class="primary-nav">
   <div class="primary-nav-inside">
-    <div class="primary-nav-third">
+    <div class="primary-nav-third first">
       {{> atoms-primary-nav-link }}
     </div>
-    <div class="primary-nav-third">
+    <div class="primary-nav-third second">
       {{> atoms-logo }}
     </div>
-    <div class="primary-nav-third">
+    <div class="primary-nav-third third">
       {{> atoms-primary-nav-link }}
     </div>
   </div>
