--- a/source/css/abstracts/_variables.scss
+++ b/source/css/abstracts/_variables.scss
@@ -202,16 +202,22 @@ $border-radius: 4px;
     justify-content: space-between;
     }
 
-@mixin flex-justify-flex-end {
-    -webkit-justify-content: flex-end;
-    -ms-flex-pack: end;
-    justify-content: flex-end;
+@mixin flex-justify-flex-start {
+    -webkit-box-pack: start;
+    -ms-flex-pack: start;
+    justify-content: flex-start;
     }
 
 @mixin flex-justify-center {
     -webkit-box-pack: center;
     -ms-flex-pack: center;
     justify-content: center;
+    }
+
+@mixin flex-justify-flex-end {
+    -webkit-justify-content: flex-end;
+    -ms-flex-pack: end;
+    justify-content: flex-end;
     }
 
  @mixin flex-align-center {
