--- a/source/_patterns/00-atoms/colors/1-brand-colors.mustache
+++ b/source/_patterns/00-atoms/colors/1-brand-colors.mustache
@@ -1,16 +1,16 @@
 <ul class="sg-colors">
 <li>
+	<span class="sg-swatch" style="background:#1a1a1a"></span>
+	<span class="sg-label">
+		$color-darker <br />
+		#1a1a1a
+	</span>
+</li>
+<li>
 	<span class="sg-swatch" style="background:#282a2d"></span>
 	<span class="sg-label">
 		$color-dark <br />
 		#282a2d
-	</span>
-</li>
-<li>
-	<span class="sg-swatch" style="background:#153659"></span>
-	<span class="sg-label">
-		$color-medium <br />
-		#153659
 	</span>
 </li>
 <li>
