--- a/source/css/style.scss
+++ b/source/css/style.scss
@@ -1,18 +1,25 @@
-/*Imports------------------------------
--------------------------------------*/
 
 @import "abstracts/variables";
 
 body {
     font-family: $font-copy;
-    color: $color-dark;
+    color: $color-light;
+    background-color: $color-dark;
+    }
+
+::selection {
+    background: $color-hot; /* WebKit/Blink Browsers */
+    }
+
+::-moz-selection {
+    background: $color-hot; /* Gecko Browsers */
     }
 
 a,
 button {
     outline: 0;
     text-decoration: none;
-    color: $color-dark;
+    color: $color-light;
     }
 
 a:hover, a:active, a:focus {
@@ -24,19 +31,12 @@ img {
     height: auto;
     }
 
-h1.large {
-    @include h1-large;
-    color: $color-light;
-    }
-
 h1 {
     @include h1;
-    color: $color-light;
     }
 
 h2 {
     @include h2;
-    color: $color-light;
     }
 
 button {
@@ -45,7 +45,6 @@ button {
 
 p {
     @include p;
-    color: $color-light;
     }
 
 .small,
@@ -61,8 +60,6 @@ p {
     @include flex;
     @include flex-justify-space-between;
     @include flex-align-center;
-    background-color: $color-dark;
-    color: $color-light;
     }
 
 .primary-nav-third {
@@ -102,19 +99,12 @@ p {
 .primary-nav-inside a {
     color: $color-white;
     display: block;
-    padding: 15px 0 15px 0;
     }
 
 /*Footer-------------------------------
 -------------------------------------*/
 
-.footer {
-    background-color: $color-dark;
-    color: $color-light;
-    }
-
 .footer-link a {
-    color: $color-light;
     @include transition;
     }
 
