--- a/public/css/pattern-scaffolding.css
+++ b/public/css/pattern-scaffolding.css
@@ -36,7 +36,6 @@
     margin: 0 0.5em 0.5em 0;
     min-width: 5em;
     max-width: 14em;
-    border: 1px solid #ddd;
     border-radius: 8px;
     }
 
@@ -52,21 +51,14 @@
     line-height: 1;
     }
 
-#atoms-logo > div.sg-pattern-example {
-    background-color: #333;
-    padding: 20px;
-    max-width: 100px;
-    text-align: center;
-    }
-
 #atoms-logo > div.sg-pattern-example img {
     max-width: 14px;
     }
 
-#organisms-primary-nav > div.sg-pattern-example .primary-nav-inside {
-    padding: 0px 30px;
+#molecules-primary-nav > div.sg-pattern-example .primary-nav-inside {
+    padding: 30px;
     }
 
-#organisms-footer > div.sg-pattern-example .footer-inside {
+#molecules-footer > div.sg-pattern-example .footer-inside {
     padding: 40px 30px;
     }
